--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,4 +119,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .responsive {
+    @apply bg-green-400 sm:bg-blue-500 md:bg-red-500 lg:bg-amber-500 xl:bg-cyan-500 2xl:bg-pink-600;
+  }
 }
